# CameraCommander

./: .gitattributes  .gitignore  README.md  main.cpp  platformio.ini  pyproject.back  pyproject.toml  settings.yaml  settings_with_tripod.yaml
app/: .gitignore  README.md  pyproject.toml  settings_with_tripod.yaml
app/docs/: downsample_scipt.bash
app/src/: camera_utils.py  camerawrapper.py  cli.py  main.py  timelapse.py  tripodwrapper.py
app/src/advanced_live_view/: __init__.py  __main__.py  camera.py  config.py  timelapse_config_ui.py  tripod.py
firmware/: README.md  platformio.ini
firmware/src/: GearedStepper.cpp  GearedStepper.h  main.cpp
hardware/: tripod_camera_u.FCStd
src/: advanced_live_view.py  camera.py  camera_utils.py  camerawrapper.py  cli.py  live_view.py  main.py  settings.yaml  timelapse.py  tripodwrapper.py
src/advanced_live_view/: __init__.py  __main__.py  camera.py  config.py  timelapse_config_ui.py  tripod.py  ui.py
src/cameracommander/: __init__.py  camera.py  cli.py
src/ref_esp8266/: GearedStepper.cpp  main.cpp
src/tripod_commander/: cli.py  tripod.py
static/: index.html
