[project]
name = "cameracommander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "gphoto2>=2.5.0",
    "loguru>=0.7.3",
    "pyserial>=3.5",
    "pytermtk>=0.44.0a0",
    "pyyaml>=6.0.2",
    "ruff>=0.6.7",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.6",
    "pillow>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cameracommander = "cameracommander.cli:cli"
tripodcommander = "tripod_commander.cli:cli"


