[project]
name = "cameracommander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Typer provides the CLI and depends on Click internally.
    "typer>=0.12.0",
    "gphoto2>=2.5.0",
    "loguru>=0.7.3",
    "pyserial>=3.5",
    "pytermtk>=0.44.0a0",
    "pyyaml>=6.0.2",
    "ruff>=0.6.7",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.6",
    "pillow>=9.5.0",
    "tqdm>=4.66.5",
    "numpy>=2.3.2",
    "gradio>=5.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# Expose the Typer application defined in ``cli.py``
cameracommander = "cli:app"

[tool.hatch.build.targets.wheel]
force-include = {"src" = "."}
